@@ -57,6 +57,7 @@
 - Ethna_ClassFactory#getManager の第1引数を、大文字小文字を区別しないように修正。(thanks:maru_cc)
 -- 第1引数はクラス名の一部として扱われており、PHPがクラス名の大文字小文字を区別しないことから、
    大文字小文字を区別せず同じインスタンスを返すのが妥当と考えられる。
+- Ethna_Plugin_LogWriter クラスにて、バックトレース走査時の軽微なバグを修正(ethna-users:1024, thanks:sfio)
 
 ** 2.3.5
 
